--- a/main.html
+++ b/main.html
@@ -21,8 +21,8 @@
         <div class="row my-5">
         <h1>Welcome to Sync-5</h1>
         <div class="card col-sm-12">
-            <div class="card-header ">
-                New Featured
+            <div class="card-header">
+                New Features
             </div>
             <div class="card-body ">
                 <h5 class="card-title">Mobile and Tablet support</h5>
@@ -38,7 +38,7 @@
         <div class="row my-5">
             <div class="card bg-danger col-sm-4">
                 <div class="card-header text-white">Alert</div>
-                <div class="card-body">
+                <div class="card-body card-deck col-sm-4">
                     <h5 class="card-title">Node Dead</h5>
                     <p class="card-text">Node 5 (east-us) is offline for last 12 days.</p>
                     
