--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
 
     <div class="container">
         <div class="row my-5">
-            <div class="card bg-danger col-sm-4">
+            <div class="card card-deck bg-danger col-sm-4">
                 <div class="card-header text-white">Alert</div>
                 <div class="card-body  col-sm-4">
                     <h5 class="card-title">Node Dead</h5>
