--- a/main.html
+++ b/main.html
@@ -39,9 +39,9 @@
             <div class="card card-deck bg-danger col-sm-4">
                 <div class="card-header text-white">Alert</div>
                 <div class="card-body  col-sm-4">
-                    <h5 class="card-title">Node Dead</h5>
-                    <p class="card-text">Node 5 (east-us) is offline for last 12 days.</p>
-                    
+                    <div class="card-title">Node Dead</div>
+                    <div><p class="card-text">Node 5 (east-us) is offline for last 12 days.</p>
+                     </div>
                 </div>
             </div>
         
