--- a/main.html
+++ b/main.html
@@ -17,28 +17,30 @@
 </head>
 <body>
   
-   
-        <h1>Welcome to Sync5</h1>
-        <div class="card my-4">
+    <div class="container">
+        <div class="row my-5">
+        <h1>Welcome to Sync-5</h1>
+        <div class="card col-sm-12">
             <div class="card-header">
                 New Features
             </div>
-            <div class="card-body">
-                <h3 class="card-title">Mobile and Tablet support</h3>
-                <p class="card-text">With this new update you will be able to sync your work across large number of platforms.</p>
+            <div class="card-body ">
+                <h5 class="card-title">Mobile and Tablet support</h5>
+                <p class="card-text">With this new update you will be able to sync your work across large number
+                of platforms.</p>
                 <a href="#" class="btn btn-primary">Read more</a>
-
+            </div>
             </div>
         </div>
-
-        <div class="row card-deck">
+    </div>
+	  <div class="row card-deck">
             <div class="card text-light bg-danger col col-md-3 mx-2">
                 <div class="card-header">
                     Alert
                 </div>
                 <div class="card-body">
                     <h3 class="card-title">Node Dead</h3>
-                    <p class="card-text">Node 5 (east-us) is online for last 12 days.</p>
+                    <p class="card-text">Node 5 (east-us) is offline for last 12 days.</p>
                 </div>
             </div>
 
@@ -51,7 +53,7 @@
                     <p class="card-text"><small class="text-muted">Last updated 12 mins ago</small></p>
                 </div>
             </div>
-			 </div>
-	 </div>
+
+    
 </body>
 </html>
